# misterrisker

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.chromadb/a6b6bfa2-6d2a-48a7-b576-e0ded5f1726a/: index_metadata.pickle
.github/: copilot_instructions.md
.github/instructions/: chat.instructions.md
e2e_tests/: conftest.py  test_agent_memory_e2e.py  test_blockchain_comparison.py  test_blockchain_transactions.py  test_follow_up_queries.py  test_multi_asset_conversation.py  test_solana_blockchain.py  test_trading_strategy_e2e.py
reports/: test_report.html
resources/: #coinbase-api.md#  ISLR_First_Printing.md  README.md  Trading Strategies and Market Psychology.md  coinbase-api.md  intelligent-investor.md  notes.org  schwab-api.md
scripts/: download_berkshire_reports.py  run_autonomous_trader.py
src/: __init__.py
src/agents/: __init__.py  chain_of_thought.py  coinbase_agent.py  finrl_agent.py  researcher_agent.py  schwab_agent.py  slack_agent.py  supervisor_agent.py
src/mcp_servers/: __init__.py
src/mcp_servers/coinbase/: __init__.py  exceptions.py  server.py
src/mcp_servers/researcher/: __init__.py  exceptions.py  server.py
src/mcp_servers/schwab/: __init__.py  exceptions.py  server.py
src/services/: __init__.py  autonomous_trader.py  blockchain_data.py  coinbase_websocket.py  finrl_service.py  predictive_models.py  rag_service.py  schwab_websocket.py  trading_strategy.py
src/web/: __init__.py  app.py
src/workflows/: __init__.py  slack_workflow.py
tests/: __init__.py  conftest.py  interactive_test.py  test_agent_memory.py  test_autonomous_trader.py  test_blockchain_data_service.py  test_chain_of_thought.py  test_coinbase_agent.py  test_coinbase_mcp_server.py  test_export_button.py  test_image_generation.py  test_realtime_analysis.py  test_research_delegation.py  test_researcher_agent.py  test_researcher_mcp_server.py  test_schwab_agent.py  test_schwab_mcp_server.py  test_slack_agent.py  test_slack_workflow.py  test_supervisor_agent.py  test_symbol_normalization.py  test_trading_recommendations.py  test_web_app.py  test_web_app_agents.py
